# hermes

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/hermes_matrix_providers/: Cargo.toml
crates/hermes_matrix_providers/src/: cache.rs  graphhopper_api.rs  lib.rs  travel_matrices.rs  travel_matrix_client.rs  travel_matrix_provider.rs
crates/hermes_optimizer/: Cargo.toml
crates/hermes_optimizer/benches/: hermes_optimizer_bench.rs
crates/hermes_optimizer/src/: lib.rs  test_utils.rs
crates/hermes_optimizer/src/acceptor/: accept_solution.rs  mod.rs  schrimpf_acceptor.rs  simulated_annealing_acceptor.rs  solution_acceptor.rs
crates/hermes_optimizer/src/json/: mod.rs  schema.rs  types.rs  vehicle_routing_problem_input.rs
crates/hermes_optimizer/src/parsers/: cvrplib.rs  li_lim.rs  mod.rs  parser.rs  solomon.rs
crates/hermes_optimizer/src/problem/: amount.rs  distance_method.rs  external_id.rs  fleet.rs  job.rs  kmh.rs  location.rs  meters.rs  mod.rs  relation.rs  service.rs  service_location_index.rs  shipment.rs  skill.rs  task_dependencies.rs  task_dependency_graph.rs  time_window.rs  travel_cost_matrix.rs  vehicle.rs  vehicle_profile.rs  vehicle_routing_problem.rs
crates/hermes_optimizer/src/selector/: mod.rs  select_best_selector.rs  select_binary_tournament.rs  select_random_selector.rs  select_solution.rs  select_weighted.rs  solution_selector.rs
crates/hermes_optimizer/src/solomon/: solomon_parser.rs
crates/hermes_optimizer/src/solver/: accepted_solution.rs  alns.rs  alns_search.rs  alns_weights.rs  insertion.rs  insertion_cache.rs  insertion_context.rs  mod.rs  noise.rs  score.rs  search.rs  solver.rs  solver_manager.rs  solver_params.rs  statistics.rs
crates/hermes_optimizer/src/utils/: bitset.rs  broken_pairs_distance.rs  cancellable_barrier.rs  duplicate.rs  enumerate_idx.rs  kruskal.rs  mod.rs  newtype_index.rs  one_tree.rs  prim.rs  sparse_table.rs  time.rs  zip_longest.rs
crates/hermes_osrm/: Cargo.toml  build.rs
crates/hermes_osrm/src/: client.rs  lib.rs
hermes/: Cargo.toml
hermes/src/: main.rs
hermes_api/: Cargo.toml
hermes_api/src/: docs.rs  error.rs  main.rs  pagination.rs  state.rs
hermes_api/src/debug/: closest.rs
hermes_api/src/landmarks/: get_landmarks.rs  mod.rs
hermes_api/src/route/: route.rs  route_handler.rs
hermes_api/src/vrp/: api_solution.rs  job.rs  jobs.rs  mod.rs  poll.rs  post.rs  post_handler.rs  routes.rs  ws.rs
hermes_api/src/vrp/benchmark/: benchmark_solution.rs  get_benchmark.rs  mod.rs  (+3 more)
hermes_cli/: Cargo.toml
hermes_cli/src/: benchmark.rs  file_utils.rs  generate.rs  get_matrix.rs  main.rs  optimize.rs  optimize_dataset.rs  parsers.rs
hermes_core/: Cargo.toml
hermes_core/benches/: hermes_benchmark.rs
hermes_core/src/: a_star.rs  astar.rs  astar_heuristic.rs  base_graph.rs  bidirectional_astar.rs  constants.rs  degrees.rs  dijkstra.rs  distance.rs  edge_direction.rs  error.rs  geometry.rs  geopoint.rs  graph.rs  graph_edge.rs  graph_overlay.rs  hermes.rs  latlng.rs  lib.rs  location_index.rs  osm.rs  properties.rs  query_graph.rs  query_graph_overlay.rs  routing.rs  routing_path.rs  shortest_path_algorithm.rs  snap.rs  stopwatch.rs  test_graph_utils.rs  weighting.rs
hermes_core/src/ch/: ch_edge.rs  ch_graph.rs  ch_graph_builder.rs  ch_storage.rs  ch_weighting.rs  mod.rs  node_contractor.rs  preparation_graph.rs  priority_queue.rs  shortcut.rs  witness_search.rs
hermes_core/src/landmarks/: landmark_heuristic.rs  landmark_search.rs  landmarks_astar.rs  landmarks_data.rs  landmarks_preparation.rs  lm_astar_heuristic.rs  lm_bidirectional_astar.rs  lm_data.rs  lm_preparation.rs  mod.rs
hermes_core/src/matrix/: matrix.rs  mod.rs  ranked_node.rs  sbi_matrix_algorithm.rs
hermes_core/src/osm/: osm_reader.rs
hermes_core/src/properties/: car_access_parser.rs  car_average_speed_parser.rs  max_speed_parser.rs  osm_id_parser.rs  property.rs  property_map.rs  tag_parser.rs
hermes_core/src/query/: query_graph.rs  query_graph_overlay.rs
hermes_core/src/routing/: astar.rs  astar_heuristic.rs  bidirectional_astar.rs  bidirectional_dijkstra.rs  ch_bidirectional_dijkstra.rs  dijkstra.rs  mod.rs  routing_path.rs  routing_path_builder.rs  routing_request.rs  search_direction.rs  shortest_path_algorithm.rs
hermes_matrix/: Cargo.toml
hermes_matrix/src/: as_the_crow_flies.rs  travel_matrix_client.rs
hermes_optimizer/: Cargo.toml
hermes_optimizer/benches/: hermes_optimizer_bench.rs
hermes_optimizer/core/benches/: hermes_optimizer_bench.rs
hermes_optimizer/matrix_providers/: Cargo.toml
hermes_optimizer/matrix_providers/src/: travel_matrix_provider.rs
hermes_optimizer/src/: lib.rs  solution.rs  test_utils.rs  vehicle_route.rs
hermes_optimizer/src/acceptor/: accept_solution.rs  greedy_solution_acceptor.rs  mod.rs  schrimpf_acceptor.rs  shrimpf_acceptor.rs  solution_acceptor.rs
hermes_optimizer/src/problem/: amount.rs  capacity.rs  distance_method.rs  job.rs  location.rs  mod.rs  neighborhood.rs  service.rs  service_location_index.rs  shipment.rs  time_window.rs  travel_cost_matrix.rs  vehicle.rs  vehicle_routing_problem.rs
hermes_optimizer/src/search/: mod.rs  search_listener.rs  termination.rs  time_termination.rs
hermes_optimizer/src/selector/: mod.rs  select_best_selector.rs  select_random_selector.rs  select_solution.rs  select_weighted.rs  solution_selector.rs
hermes_optimizer/src/solomon/: mod.rs  solomon_parser.rs
hermes_optimizer/src/solver/: accepted_solution.rs  constraint.rs  insertion.rs  insertion_context.rs  minimize_completion_time.rs  minimize_cost_constraint.rs  mod.rs  noise.rs  route_capacity_constraint.rs  score.rs  score_level.rs  search.rs  solution.rs  solver.rs  solver_manager.rs  solver_params.rs  statistics.rs  working_solution.rs
hermes_optimizer/src/utils/: bbox.rs  kruskal.rs  mod.rs  normalize.rs
hermes_optimizer/tests/: mock_rng.rs  mod.rs
hermes_optimizer/tests/intensify/: mod.rs  two_opt_tests.rs
hermes_optimizer/tests/ruin/: mod.rs  ruin_radial_tests.rs
hermes_optimizer/tests/setup/: mod.rs
hermes_optimizer/tests/test_utils/: mod.rs
(+364 files in other folders)
