[workspace]
resolver = "2"
members = ["hermes", "hermes_api", "hermes_core", "hermes_optimizer/matrix_providers", "hermes_optimizer/core"]


[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
tokio = "1.48.0"
rand = "0.9.2"
rayon = "1.11.0"
tracing = "0.1.44"
rstar = "0.12.2"
fxhash = "0.2.1"
geo-types = "0.7.18"
thiserror = "2.0.17"
anyhow = "1.0.100"

[profile.release]
debug = false
opt-level = 3

[build]
rustflags = ["-Csymbol-mangling-version=v0"]
