[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = "0.30.0"
geojson = "0.24.2"
hermes_core = { version = "0.1.0", path = "../hermes_core" }
hermes_optimizer = { version = "0.1.0", path = "../hermes_optimizer" }
mimalloc = "0.1.47"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[profile.release]
debug = true
