[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
geo.workspace = true
geojson = "0.24.2"
hermes_routing = { version = "0.1.0", path = "../crates/hermes_routing" }
hermes_optimizer = { version = "0.1.0", path = "../crates/hermes_optimizer" }
hermes_matrix_providers = { version = "0.1.0", path = "../crates/hermes_matrix_providers" }
jiff.workspace = true
mimalloc = "0.1.47"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
