[package]
name = "hermes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
hermes_core = { version = "0.1.0", path = "../hermes_core" }
tower = { version = "0.5.2" }
serde_json = "1.0.140"
geojson = { version = "0.24.2", features = ["geo-types"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
hermes_optimizer = { version = "0.1.0", path = "../hermes_optimizer", features = [
    "statistics",
] }
uuid = { version = "1.17.0", features = ["serde"] }
parking_lot = "0.12.4"
jiff = "0.2.15"
geo = "0.30.0"
mimalloc = "0.1.47"
