[package]
name = "hermes_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hermes"
path = "src/main.rs"


[features]
dhat-heap = []

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
jiff = "0.2.17"
tokio = { workspace = true, features = ["rt","rt-multi-thread","macros"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
anyhow = { workspace=true }
hermes_optimizer = { path = "../crates/hermes_optimizer" }
indicatif = "0.18.3"
mimalloc = "0.1.48"
dhat = "0.3.3"
serde_json = {workspace = true}
