[package]
name = "hermes_core"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = "0.30.0"
geo-types = "0.7.15"
intmap = "3.1.0"
osmpbfreader = "0.17.0"
paste = "1.0.15"
rayon = "1.10.0"
rkyv = { version = "0.8.10", features = ["pointer_width_64"] }
rstar = { version = "0.12.2", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
fxhash = "0.2.1"
bincode = { version = "2.0.1", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hermes_benchmark"
harness = false
