[package]
name = "hermes_matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
geo-types = { workspace = true }
reqwest = { version = "0.12.26", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
