[package]
name = "hermes_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
geo = "0.30.0"
jiff = { version = "0.2.15", features = ["serde"] }
parking_lot = "0.12.4"
rand = "0.9.1"
rstar = "0.12.2"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["sync", "rt"] }
tracing = "0.1.41"
uuid = { features = ["v4"], version = "1.17.0" }
