[features]
statistics = []

[package]
name = "hermes_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
either = "1.15.0"
fxhash = "0.2.1"
geo = { version ="0.30.0", features=["use-serde"] }
jiff = { version = "0.2.15", features = ["serde"] }
parking_lot = { version = "0.12.4", features = ["serde"] }
rand = "0.9.1"
rayon = "1.11.0"
rstar = "0.12.2"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
smallvec = { version = "1.15.1", features = ["serde", "const_new"] }
tokio = { version = "1.46.1", features = ["sync", "rt"] }
tracing = "0.1.41"
uuid = { features = ["v4"], version = "1.17.0" }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "hermes_optimizer_bench"
harness = false
