[features]
statistics = []
json = []

[package]
name = "hermes_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
hermes_matrix_providers = { path = "../hermes_matrix_providers" }
fxhash = { workspace = true }
geo = { version ="0.30.0", features=["use-serde"] }
jiff = { version = "0.2.15", features = ["serde"] }
parking_lot = { version = "0.12.4", features = ["serde"] }
rand = "0.9.1"
rayon = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smallvec = { version = "1.15.1", features = ["serde", "const_new"] }
tokio = { workspace = true, features = ["sync", "rt"] }
tracing = { workspace = true }
uuid = { features = ["v4"], version = "1.17.0" }
anyhow = { workspace = true }
thread_local = "1.1.9"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "hermes_optimizer_bench"
harness = false
