[package]
name = "hermes_osrm"
version = "0.1.0"
edition = "2024"

[dependencies]
geo-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
flatbuffers = "25.12.19"
